maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:38: error: expected class or object definition
def whereWall():Int ={  
^Escaper:58: error: Unmatched closing brace '}' ignored here
}
^